--- a/package.json
+++ b/package.json
@@ -1,16 +1,35 @@
 {
-    "private": true,
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.16",
-        "axios": "^1.6.1",
-        "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.3.5",
-        "vite": "^4.0.0"
-    }
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "axios": "^1.6.1",
+    "create-vite": "^5.0.0",
+    "laravel-vite-plugin": "^0.8.0",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite": "^4.0.0"
+  },
+  "name": "pruebalaravel",
+  "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\" alt=\"Laravel Logo\"></a></p>",
+  "version": "1.0.0",
+  "main": "postcss.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daniel22alejandro/pruebaLaravel.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/daniel22alejandro/pruebaLaravel/issues"
+  },
+  "homepage": "https://github.com/daniel22alejandro/pruebaLaravel#readme"
 }
